// Copyright 2025 LINE Corporation
//
// LINE Corporation licenses this file to you under the Apache License,
// version 2.0 (the "License"); you may not use this file except in compliance
// with the License. You may obtain a copy of the License at:
//
//   https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package hello.service.v1;

import "google/api/annotations.proto";

option java_package = "testing.grpc.jsonname";
option java_multiple_files = true;

message JsonNameRequest {
  // Should ignore this json_name option for the path variable.
  string json_name_input = 1 [json_name = "jsonNameInput"];
  string original_name = 2;
  string query_param = 3;
}

message JsonNameReply {
  string message = 1;
}

service JsonNameTestService {
  rpc Hello (JsonNameRequest) returns (JsonNameReply){
    option (google.api.http) = {
      // This is a test to ignore the json_name option. The original name should be used to match the path.
      get: "/v1/hello/{json_name_input}/{original_name}"
    };
  }
}
